<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefef"
    tools:context="com.example.administrator.manager.view.me.PersonalInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <!--头像-->
        <LinearLayout
            android:id="@+id/ll_head_portrait"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_portrait_name"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/tupian1"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <!--昵称-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
