<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:background="@color/mt_white">

    <!--首页-->
    <LinearLayout
        android:id="@+id/home_menu_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:onClick="onTabClick">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/home_iv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_home"/>
            <TextView
                android:id="@+id/home_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/home_iv"
                android:text="@string/home_menu_name"/>
            <TextView
                android:id="@+id/unread_home"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/round_red"
                android:layout_alignRight="@id/home_iv"
                android:layout_marginRight="6dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="7"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <!--分类-->
    <LinearLayout
        android:id="@+id/classify_menu_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:onClick="onTabClick">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/classify_iv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tab_classify"/>
            <TextView
                android:id="@+id/classify_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/classify_iv"
                android:text="@string/classify_menu_name"/>
            <TextView
                android:id="@+id/unread_classify"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/round_red"
                android:gravity="center"
                android:text="7"
                android:textColor="@android:color/white"
                android:textSize="0sp"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <!--我-->
    <LinearLayout
        android:id="@+id/me_menu_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:onClick="onTabClick">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/me_iv"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/tab_me"/>
            <TextView
                android:id="@+id/me_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/me_iv"
                android:text="@string/me_menu_name"/>
            <TextView
                android:id="@+id/unread_me"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignRight="@id/me_iv"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/round_red"
                android:gravity="center"
                android:text="99"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
